--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>React App</title>
+    <title>StarSide Jumpers</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <style>
       body {
